@startuml
'https://plantuml.com/class-diagram
!theme vibrant
class Autenticazione {
  +email: varchar
  +password: varchar
}
Autenticazione "1" --- "1" Utente:AccessoUtente
Autenticazione "1" --- "1" Gestore:AccessoGestore
class Utente{
  +nome: varchar
  +cognome: varchar
  +dataNascita: Date
  +comunediNascita: varchar
  +sesso: sesso
  +codiceFiscale: varchar
}
note "{ Partial , Overlapping }" as N1
Utente ... N1
Operatore .. N1
Studente .. N1
class Sede {
  +città: varchar
  +via: varchar
  +civico: varchar
  +provincia: varchar
  +cap: Integer
}
class Gestore {
  +nome: varchar
  +descrizione: varchar
  +telefono: varchar
  +cod.Gestore: varchar
}
Gestore "*" - "1" Sede:Collocato
class Operatore{
  +cod.Operatore :varchar
}
class Studente{
  +cod.Studente: varchar
}
enum sesso{
M
F
}
Utente "1" -- "0..1" Operatore:EssereOperatore
Utente "1" -- "0..1" Studente:EssereStudente
Gestore "1" -- "0..*" Corso:Possiede
Corso "*" --- "*" Studente
Corso "*" - "1..*" Operatore
(Corso,Operatore)..Coordina
class Coordina{
  +Richiesta: boolean
}

class Corso{
  +titolo: varchar
  +descrizione: varchar
  +iscrizioniMassime: double
  +tassoPresenzeMinime: float
  +cod.Corso: varchar
}
class AreaTematica{
  +Tipo
  +cod.AreaTematica
}
Corso "*" --- "1..*" AreaTematica:Appartengono
class Lezione{
  +titolo: varchar
  +descrizione: varchar
  +dataoraInizio: Timestamp
  +durata: Time
  +cod.Lezione: varchar
}
Corso "1" -- "1..*" Lezione:Svolto
(Corso, Studente) .. Iscritti
Lezione "*" -- "*" Studente
(Lezione,Studente)..Prenotazioni
class Prenotazioni{
Presente: boolean
}
class Iscritti{
+idonei: boolean
}
class Statistiche{
  presenzeMinime
  presenzeMassime
  presenzeMedie
  percentualeRiempimentoMedia
}
Corso "1" - "1" Statistiche:Associate
@enduml